--- a/modules/cassandra/store/pom.xml
+++ b/modules/cassandra/store/pom.xml
@@ -39,7 +39,7 @@
         <cassandra-driver.version>3.0.0</cassandra-driver.version>
         <cassandra-all.version>3.3</cassandra-all.version>
         <netty.version>4.1.27.Final</netty.version>
-        <guava.version>19.0</guava.version>
+        <guava.version>25.1-jre</guava.version>
         <metrics-core.version>3.0.2</metrics-core.version>
     </properties>
 
