--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -60,15 +60,15 @@
         <commons.collections.version>3.2.2</commons.collections.version>
         <commons.lang.version>2.6</commons.lang.version>
         <cron4j.version>2.2.5</cron4j.version>
-        <curator.version>2.9.1</curator.version>
+        <curator.version>4.2.0</curator.version>
+        <!--Need this version to test ZooKeeper 3.4.x-->
+        <curator.test.version>2.9.1</curator.test.version>
         <easymock.version>3.4</easymock.version>
         <ezmorph.bundle.version>1.0.6_1</ezmorph.bundle.version>
         <ezmorph.version>1.0.6</ezmorph.version>
         <flume.ng.version>1.7.0</flume.ng.version>
         <guava.retrying.version>2.0.0</guava.retrying.version>
-        <guava.version>18.0</guava.version>
-        <guava14.version>14.0.1</guava14.version>
-        <guava16.version>16.0.1</guava16.version>
+        <guava.version>25.1-jre</guava.version>
         <h2.version>1.4.195</h2.version>
         <hadoop.version>2.4.1</hadoop.version>
         <hamcrest.version>1.2</hamcrest.version>
@@ -84,8 +84,8 @@
         <jetty.version>9.4.11.v20180605</jetty.version>
         <jmh.version>1.13</jmh.version>
         <jms.spec.version>1.1.1</jms.spec.version>
-        <jsch.bundle.version>0.1.53_1</jsch.bundle.version>
-        <jsch.version>0.1.53</jsch.version>
+        <jsch.bundle.version>0.1.54_1</jsch.bundle.version>
+        <jsch.version>0.1.54</jsch.version>
         <jsonlib.bundle.version>2.4_1</jsonlib.bundle.version>
         <jsonlib.version>2.4</jsonlib.version>
         <jtidy.version>r938</jtidy.version>
@@ -110,17 +110,17 @@
         <slf4j.version>1.7.7</slf4j.version>
         <slf4j16.version>1.6.4</slf4j16.version>
         <spark.hadoop.version>2.6.5</spark.hadoop.version>
-        <spark.version>2.2.0</spark.version>
+        <spark.version>2.3.3</spark.version>
         <spring.data.version>1.13.14.RELEASE</spring.data.version> <!-- don't forget to update spring version -->
         <spring.version>4.3.18.RELEASE</spring.version><!-- don't forget to update spring-data version -->
         <spring41.osgi.feature.version>4.1.7.RELEASE_1</spring41.osgi.feature.version>
-        <tomcat.version>8.0.23</tomcat.version>
+        <tomcat.version>9.0.21</tomcat.version>
         <twitter.hbc.version>2.2.0</twitter.hbc.version>
         <yammer.metrics.annotation.version>2.2.0</yammer.metrics.annotation.version>
         <yammer.metrics.core.version>2.2.0</yammer.metrics.core.version>
         <yardstick.version>0.8.3</yardstick.version>
         <zkclient.version>0.5</zkclient.version>
-        <zookeeper.version>3.4.13</zookeeper.version>
+        <zookeeper.version>3.4.14</zookeeper.version>
 
         <!-- OSGI Manifest generation default property values -->
         <osgi.import.package>*</osgi.import.package>
