--- a/modules/zookeeper/pom.xml
+++ b/modules/zookeeper/pom.xml
@@ -68,7 +68,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>${guava16.version}</version>
+            <version>${guava.version}</version>
         </dependency>
 
         <!-- Do not remove org.codehaus.jackson:jackson-core-asl it is required by Apache Curator at runtime -->
@@ -111,7 +111,7 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-test</artifactId>
-            <version>${curator.version}</version>
+            <version>${curator.test.version}</version>
             <scope>test</scope>
         </dependency>
 
